k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: wisecow

spec:
  replicas: 2

  selector:
    matchLabels:
      app: wisecow

  template:
    metadata:
      labels:
        app: wisecow

    spec:
      containers:
      - name: wisecow

        image: rockybhai37/wisecow:latest

        ports:
        - containerPort: 4499
