k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: wisecow-ingress

spec:
  ingressClassName: nginx

  tls:
  - hosts:
      - wisecow.local
    secretName: wisecow-tls

  rules:
  - host: wisecow.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: wisecow-service

            port:
              number: 80
